--- a/list.html
+++ b/list.html
@@ -6,7 +6,7 @@
   </head>
   <body> 
     <form action="/list" method="POST">
-      <input name="Term" placeholder="fortnite sex gaming" required="required" type="text">
+      <input name="Term" placeholder="entry" required="required" type="text">
       <input name="Submit" value="Add" type="submit">
     </form>
     <p>This is the list of "why not search for" entries in michaelsoft binbows.</p>
